--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                 Mark All Read
             </button>
         </div>
-        <div id="prof-notifications" style="display:flex; flex-direction:column; gap:10px;"></div>
+        <div id="prof-notifications" class="notifications-scroll"></div>
     </div>
 
     <!-- ── STATS ──────────────────────────────────────────────── -->
