alpha launch time

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="./libraries/html2canvas.min.js"></script><!-- HTML2CANVAS FOR TURNING PAGE INTO IMAGE -->
     <script src="./libraries/jsQR.min.js"></script><!-- QR CODE READER -->
 
-    <script src="/podcube.js" type="module"></script>
+    <script src="./PodCube.js" type="module"></script>
     
     <script src="./degradation.js"></script>
     <script src="./poduser/poduser.js"></script>
@@ -478,8 +478,8 @@
             <h3>Our Visionary Beginnings</h3>
             <p class="mb-10">
                 The origins of PodCube™ lie in the joint discovery of the Blakely-Huffman Spheroid (BHS), a
-                revolutionary eleven-dimensional model of spacetime first presented by founders Dick Blakely and Jimley
-                Huffman at their eigth grade science fair. In 2027, they won no awards but their shared realization that
+                revolutionary eleven-dimensional model of spacetime first presented in 2027 by founders Dick Blakely and Jimley
+                Huffman at their eigth grade science fair. They won no awards that year, but their shared realization that
                 "if time were real, it would be a sphere" would change the world in 2048.
             </p>
             <p class="mb-10">
@@ -526,7 +526,7 @@
                 Per the terms of service, all PodCube™ Customers™ agree to unlimited distribution of audio captured by
                 their PodCube™ device(s). Our Brigistics Department processes every transmission, meticulously
                 categorizing, tagging, and organizing them. They curate their favorite moments into a public RSS "Feed
-                Exporation Experience Journey", which you can access here, or your via podcast application of choice.
+                Exporation Experience Journey" which you can access here, or your via podcast application of choice.
             </p>
         </div>
 
